# ical365proxy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  timezone.csv
