[project]
name = "ical365proxy"
version = "0.1.0"
description = "A proxy for fixing Outlook iCal timezone identifiers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "flask<3",
   "requests<3",
   "python-dotenv<2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
